<animateColor> applied to filtered ellipse does not update https://bugs.webkit.org/show_bug.cgi?id=68457 <rdar://problem/10154777>

Reviewed by Darin Adler.

Invalidate the filter's cache when style changes take place so that style changes are respected.

Test: svg/filters/animate-fill.svg


Canonical link: https://commits.webkit.org/84827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96052 268f45cc-cd09-0410-ab3c-d52691b4dbfc